Fixed a minor visual issue with gap between buttons

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -13,7 +13,7 @@ main {
 }
 .buttons {
   @include grid(repeat(4, 1fr), repeat(6, 1fr));
-  gap: 0.1rem;
+  gap: 0.09rem;
   button {
     width: 100%;
     height: 100%;
@@ -22,6 +22,7 @@ main {
     outline: none;
   }
 }
+// TODO add :focus to buttons
 .input-display {
   grid-area: 2/1/2/1;
 }
